traefik/deployment.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8080
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
        - --web
        - --configfile=/toml/traefik-public.toml
        volumeMounts:
        - name: toml
          mountPath: "/toml/traefik-public.toml"
          readOnly: true
        - name: traefik-keys
          mountPath: /config
      volumes:
      - name: toml
        secret:
          secretName: traefik-toml
      - name: traefik-keys
        hostPath:
          path: /traefik
          type: Directory
