traefik/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik.elevate.se
    http:
      paths:
      - backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
